# PodcastMaker-AI-Podcast-Generation-System

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: API_DOCUMENTATION.md  alembic.ini  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: a76fdfdb8449_add_foreign_key_to_refresh_tokens.py  d73ba140a0b2_initial_tables.py
backend/app/: main.py
backend/app/core/: __init__.py  database.py  security.py  settings.py
backend/app/models/: __init__.py  podcast.py  user.py
backend/app/routers/: __init__.py  auth.py  health.py  podcasts.py
backend/app/schemas/: __init__.py  podcast.py  user.py
backend/app/services/auth/: service.py
backend/app/services/llm/: service.py
backend/app/services/podcast/: service.py
backend/app/services/tts/: service.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AppLayout.jsx  Footer.jsx  Header.jsx
frontend/src/components/landing/: CTA.jsx  Features.jsx  Hero.jsx  HowItWorks.jsx  Pricing.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: AboutPage.jsx  DashboardPage.jsx  LandingPage.jsx  LoginPage.jsx  NewPodcastPage.jsx  PodcastDetailPage.jsx  PricingPage.jsx  PrivacyPage.jsx  RegisterPage.jsx  TermsPage.jsx
