[project]
name = "podcastmaker-backend"
version = "0.1.0"
description = "AI-powered podcast generation API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "redis>=5.1.0",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.12",
    "bcrypt==4.1.3",
    "edge-tts>=7.2.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pyright[nodejs]>=1.1.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = [
    "B008",  # FastAPI Depends() in function args — standard pattern
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
